--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div id="form-container">
                 <div id="form-box">
-                    <img src="img/logo_instagram.png" alt="Instagram">
+                    <img id="logo-insta" src="img/logo_instagram.png" alt="Instagram">
                     <form id="login-form">
                         <input type="text" name="username" placeholder="Número de telefone, usuário ou e-mail" />
                         <input type="password" name="password" id="Senha" />
